<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Countdown Timer Widget</string>
    <string name="timer_uninitialised">00:00:00</string>
    <string name="start">Start!</string>
    <string name="cancel">Cancel Timer</string>
    <string name="new_timer">New Countdown</string>
    <string name="silent">Silent</string>
    <string name="description">Description (optional)</string>
    <string name="timer_expired">Timer expired</string>
    <string name="click_to_remove">Select to remove!</string>
    <string name="recently_used">Recently used timers</string>
    <string name="settings">Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="insistent">Insistent</string>
    <string name="insistent_desc">Alarm continues until it\'s canceled</string>
    <string name="alarm_sound">Alarm Ringtone</string>
    <string name="volume">Volume</string>
    <string name="volume_desc">Choose which volume source to use</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="refresh_notice_title">Important Battery Notice</string>
    <string name="refresh_notice_text">Unfortunately Androids widget API is not designed for frequent updates! These can cause battery drainage and anything from lags till total freezing of your launcher application. However Countdown Timer Widget is designed to use as little battery as possible. When no timer is activated or the screen is turned off Countdown Timer Widget will use no CPU and no battery. The alarms will be triggered anyway! If you experience lags or find that your battery drainage has increased significantly using this widget increase the refresh interval to an acceptable amount.</string>
    <string name="about_title">About</string>
    <string name="about_text">This software is licensed under the Apache License 2.0.\n \n Download source at my website: http://www.dimond.de\n \n -v0.3.3: Added russian language support\n -v0.3.2: Fixed ringtone bug\n -v0.3.1: Added volume option (custom volume not possible with notifications, sorry)\n -v0.3: Added recent timers list and descriptions\n -v0.2: Fixed performance issues\n -v0.1.3: Bugfixes\n -v0.1.2: Bugfixes\n -v0.1.1: Added custom ringtone</string>
    <string name="help_title">Help</string>
    <string name="help_text">This is a widget and no app, so just add the widget to your homescreen in the usual manner. To change the settings later, just press the menu button while creating a new timer.\n If your screen lags/freezes please read the \"Important Battery Notice\"!\n \n Any questions/requests? Please write to countdowntimer@dimond.de</string>
</resources>
